kubernetes-labs/lab-27-istio-gateway-tls/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-27-gateway-tls
  labels:
    istio-injection: enabled
